--- a/src/Components/Feed/FeedCmp.css
+++ b/src/Components/Feed/FeedCmp.css
@@ -8,7 +8,7 @@
 }
 
 .feed__single{
-    height: 250px;
+    height: 20rem;
     list-style: none;
     padding: 20px;
     background-color: rgb(220, 220, 220);
@@ -18,8 +18,8 @@
 }
 
 .feed__single > img{
-    width: 100%;
-    height: 95%;
+    width: 90%;
+    height: 60%;
     object-fit: cover;
     margin-bottom: 3px;
 }
@@ -35,4 +35,9 @@
     padding: 15px 20px;
     border: 1px solid gray;
     cursor: pointer;
+  }
+
+  .details{
+    display: flex;
+    flex-direction: column;
   }
