--- a/src/Components/Feed/FeedCmp.css
+++ b/src/Components/Feed/FeedCmp.css
@@ -4,7 +4,7 @@
     list-style-type: none;
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
 }
 
 .feed__single{
@@ -25,10 +25,12 @@
 }
 
 .pagination {
-    padding: 10px;
-    margin: 15px 0;
+    width: 100%;
+    height: 30%;
+    margin: 5px 0;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
   
   .pagination > span{
@@ -48,4 +50,16 @@
   
   .pagination__selected{
     background-color: rgb(220, 220, 220);
+  }
+
+  @media screen and (min-width: 768px) {
+    .feeds{
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    .feeds{
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
