--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,47 @@
 .searchsortDiv{
-    display: flex;
+    margin: 20px;
+    padding: 0;
+    list-style-type: none;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
 }
 
 .header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 2rem;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 500;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
     text-align: center;
+    color: #1e375a;
 }
+
+body{
+    background-color: #E9F1FA;
+}
+
+.Icon {
+    min-width: 52px;
+    min-height: 52px;
+    border-radius: var(--border-radius);
+    box-shadow: 
+      -2px -2px 6px rgba(#fff, .6),
+      2px 2px 12px #c8d8e7;
+  }
+
+
+  @media screen and (min-width: 768px) {
+    .searchsortDiv{
+      grid-template-columns: repeat(0, 1fr);
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    .searchsortDiv{
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
