--- a/src/Components/Feed/FeedCmp.css
+++ b/src/Components/Feed/FeedCmp.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Hind&display=swap');
+
 .feeds{
     margin: 20px;
     padding: 0;
@@ -11,10 +13,12 @@
     height: 20rem;
     list-style: none;
     padding: 20px;
-    background-color: rgb(220, 220, 220);
+    background-color: #FFFFFF;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
+    border-top: 4px solid #00ABE4;
 }
 
 .feed__single > img{
@@ -22,26 +26,46 @@
     height: 60%;
     object-fit: cover;
     margin-bottom: 3px;
+    border-radius: 8px;
 }
 
 .pagination {
-    width: 100%;
-    height: 30%;
-    margin: 5px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 5px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
+    grid-auto-rows: 2.5rem;
   }
   
   .pagination > span{
-    padding: 15px 20px;
     border: 1px solid gray;
     cursor: pointer;
+    text-align: center;
   }
 
   .details{
     display: flex;
     flex-direction: column;
+  }
+
+  .description{
+    color: #1E375AB3;
+    font-size: 15px;
+    font-family: "Hind", sans-serif;
+  }
+
+  .title{
+    color: #1E3575;
+    font-family: "Hind", sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+  }
+
+  .price{
+    color: #1E3575;
+    font-family: "Hind", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
   }
 
   .pagination__disable{
