--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -64,7 +64,9 @@ input {
   font-weight: 600;
   color: #a9b8c9;
   transition: all 240ms ease-out;
-  width: 100%;
+  width: 80%;
+  height: 50%;
+  border-radius: 1.5rem;
   
   &::placeholder {
     color: #6d7f8f;
@@ -105,16 +107,3 @@ input {
     box-shadow: var(--top-shadow);
   }
 }
-
-
-/* @media screen and (min-width: 768px) {
-  .Card{
-    width: 40%;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .Card{
-    width: 90%;
-  }
-} */
