--- a/src/Components/Feed/FeedCmp.css
+++ b/src/Components/Feed/FeedCmp.css
@@ -35,15 +35,16 @@
 }
 
 .pagination {
-    padding: 2%;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
-    grid-auto-rows: 2.5rem;
+    padding: 1%;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
   }
   
   .pagination > span{
     border: 1px solid gray;
+    width: 3rem;
     cursor: pointer;
     text-align: center;
   }
@@ -56,19 +57,19 @@
   .description{
     color: #1E375AB3;
     font-size: 15px;
-    font-family: "Hind", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   }
 
   .title{
     color: #1E3575;
-    font-family: "Hind", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-size: 25px;
     font-weight: 500;
   }
 
   .price{
     color: #1E3575;
-    font-family: "Hind", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-size: 20px;
     font-weight: 500;
   }
