--- a/src/Components/Table/Table.css
+++ b/src/Components/Table/Table.css
@@ -7,7 +7,7 @@
 
 
 .table{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   border-collapse: collapse;
   width: 98%;
 }
